force-app/main/default/objects/Playing_Eleven__c/Playing_Eleven__c.object-meta.xml
<CustomObject>
    <label>Playing Eleven</label>
    <nameField>
        <label>Playing Eleven Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playing Elevens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>