force-app/main/default/objects/Playing_Eleven__c/fields/isCap__c.field-meta.xml
<CustomField>
    <fullName>isCap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCaptain</label>
    <type>Checkbox</type>
</CustomField>