force-app/main/default/objects/Playing_Eleven__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Playing Elevens</relationshipLabel>
    <relationshipName>Playing_Elevens</relationshipName>
    <type>Lookup</type>
</CustomField>