force-app/main/default/objects/Playing_Eleven__c/fields/Teamid__c.field-meta.xml
<CustomField>
    <fullName>Teamid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Playing Elevens</relationshipLabel>
    <relationshipName>Playing_Elevens</relationshipName>
    <type>Lookup</type>
</CustomField>